kdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-deployment
  labels:
    app: test-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-app
        image: gcr.io/neat-tempo-205717/app1:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: 512Mi
            cpu: "0.5"
          requests:
            memory: 256Mi
            cpu: "0.2"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-web-deployment
  labels:
    app: test-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-web
  template:
    metadata:
      labels:
        app: test-web
    spec:
      containers:
      - name: test-web
        image: gcr.io/neat-tempo-205717/web1:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: 512Mi
            cpu: "0.5"
          requests:
            memory: 256Mi
            cpu: "0.2"
---

apiVersion: v1
kind: Service
metadata:
  name: test-app-service
spec:
  # type: LoadBalancer
  type: NodePort
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000


---

apiVersion: v1
kind: Service
metadata:
  name: test-web-service
spec:
  # type: LoadBalancer
  type: NodePort
  selector:
    app: test-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
    # kubernetes.io/ingress.class: "gce-internal"
spec:
  rules:
  - http:
      paths:
      - path: /app
        backend:
          serviceName: test-app-service
          servicePort: 80
      - path: /*
        backend:
          serviceName: test-web-service
          servicePort: 80

      # - path: /static/*
      #   backend:
      #     serviceName: test-web-service
      #     servicePort: 80
